--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>Welcome to Your_domain!</title>
     </head>
     <body>
-        <h1>Success!  The your_domain server block is working!</h1>
+        <h1>Success!  The  server block is working fine!</h1>
     </body>
 </html>
