--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>Welcome to Your_domain!</title>
     </head>
     <body>
-        <h1>Success!  Hello World!</h1>
+        <h1>Success!  Hello everyone!</h1>
     </body>
 </html>
